# dockpulse

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .env.staging.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .redocly.yaml  CONTRIBUTING.md  README.md  SSE_BACKEND_REQUIREMENTS.md  biome.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  mosquitto-acl.conf  mosquitto.conf  mosquitto.dev.conf
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 143e62cd073b_seed_sprint_1_demo_data.py  1ed9b261de20_add_berth_availability_windows_table.py  24fe6fddcaca_merge_assignment_and_fk_indexes_heads.py  (+26 more)
backend/app/: __init__.py  auth.py  broadcaster.py  cf_access.py  config.py  db.py  dependencies.py  events.py  logging_config.py  main.py  models.py  mqtt.py  notifications.py  rate_limit.py  schemas.py  serializers.py
backend/dpcli/: CONTRIBUTING.md  cli.py
backend/scripts/: dump_openapi.py
backend/tests/: _helpers.py  conftest.py  test_adopt_api.py  test_adoption_stream.py  test_assignment_api.py  test_berths_api.py  test_cf_access.py  test_claims.py  test_config.py  test_cookie_auth.py  test_decommission_dispatch.py  test_dependencies.py  test_dpcli.py  test_email_verification.py  test_events.py  test_gateways_api.py  test_harbors_api.py  test_mqtt_dispatch.py  test_mqtt_parsing.py  test_nodes_api.py  test_notifications.py  test_provision_dispatch.py  test_rate_limit.py  test_stream.py  test_sweeper.py  test_users_api.py
(+171 files in other folders)
