[project]
name = "dockpulse-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135",
  "uvicorn[standard]>=0.44",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.31",
  "alembic>=1.18",
  "aiomqtt>=2.5",
  "pydantic>=2.12",
  "pyyaml>=6.0",
  "sse-starlette>=2.4",
  "pwdlib[argon2]>=0.3.0",
  "pyjwt>=2.12.1",
  "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.25",
  "httpx>=0.28",
  "schemathesis>=4.15",
  "ruff>=0.11",
  "pre-commit>=4.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "T20",   # flake8-print (catch stray prints)
]

[tool.ruff.format]
quote-style = "double"
